# Aix-DB

./: .dockerignore  .env  .env.dev  .env.test  .gitignore  Makefile  README-en.md  README.md  README_en.md  pyproject.toml  requirements.txt  serv.py  text2sql数据表血缘关系三种方案总结.md
.github/workflows/: build-all-in-one.yml
agent/: claude_sdk_agent.py  common_react_agent.py  deep_research_agent.py  langgraph_react_agent.py
agent/context/: conversation_history_manager.py
agent/deepagent/: deep_research_agent.py  instructions.md
agent/excel/: excel_agent.py  excel_agent_state.py  excel_data_render_apache.py  excel_duckdb_manager.py  excel_excute_sql.py  excel_graph.py  excel_mapping_node.py  excel_sql_node.py  parallel_collector.py
agent/mcp/: query_qa_history.py  query_qa_history_mcp.py
agent/text2sql/: text2_sql_agent.py
common/: datasource_util.py  duckdb_util.py  exception.py  file_parse.py  initialize_datasource_tables.py  initialize_mysql.py  initialize_neo4j.py  initialize_postgres.py  llm_util.py  local_embedding.py  minio_util.py  mysql_util.py  pdf_util.py  redis_tool.py  res_decorator.py  token_decorator.py  word_util.py
common/neo4j/: generated_relationships.py  mapper_relationships.json  mapper_to_neo4j.py  mybatis_mapper_parser.py  quick_mapper_to_neo4j.py
config/: load_env.py  logging.conf  serv.py
constants/: code_enum.py  dify_rest_api.py
controllers/: common_chat_api.py  data_training_api.py  datasource_api.py  db_chat_api.py  dify_chat_api.py  file_chat_api.py  llm_chat_api.py  ta_assistant_api.py  user_rest_api.py  user_service_api.py
docker/: .env.template  Dockerfile  deploy.sh  docker-compose.yaml  init_data.sh  init_sql.sql
docker/all-in-one/: Dockerfile  README.md  docker-compose.all-in-one.yml  docker-entrypoint.sh  nginx.conf  supervisord.conf
docker/dify/: 数据问答.yml  数据问答_v1.1.0.yml  数据问答_v1.1.1_deepseek.yml  数据问答_v1.1.2_deepseek.yml  数据问答_v1.1.4_deepseek.yml  数据问答_v1.1.6_qwen_plus.yml
docs/: MIGRATION_PLAN_SUMMARY.md  MIGRATION_PROGRESS.md  MIGRATION_REPORT_SQLBOT.md  TEST_PLAN_PHASE7.md  TEST_RESULTS_PHASE1.md  TEST_RESULTS_PHASE2.md  TEST_RESULTS_PHASE3.md  TEST_SUMMARY_PHASE7.md  mkdocs.yml  redoc.html  swagger.html
docs/docs/: environment.md  faq.md  index.md  local-development.md  quick-start.md
docs/site/: 404.html  index.html  sitemap.xml
model/: database_service.py  db_connection_pool.py  db_models.py  schemas.py  serializers.py
services/: aimodel_service.py  data_training_service.py  datasource_service.py  db_qadata_process.py  dify_service.py  embedding_service.py  file_chat_service.py  llm_service.py  search_service.py  ta_assistant_service.py  terminology_service.py  text2_sql_service.py  user_service.py
src/storage/: __init__.py  (+2 more)
web/: .eslintrc-auto-import.json  .stylelintrc.cjs  Makefile  README.md  auto-imports.d.ts  babel.config.cjs  components-instance.d.ts  components.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
(+166 files in other folders)
